--- a/index.html
+++ b/index.html
@@ -327,25 +327,21 @@
                     <span class="info-value" id="name">-</span>
                 </div>
                 <div class="info-item">
-                    <span class="info-label">연락처</span>
-                    <span class="info-value" id="phone">-</span>
-                </div>
-                <div class="info-item">
                     <span class="info-label">이메일</span>
                     <span class="info-value" id="email">-</span>
                 </div>
                 <div class="info-item">
-                    <span class="info-label">결제수단</span>
-                    <span class="info-value" id="payment">-</span>
+                    <span class="info-label">연락처</span>
+                    <span class="info-value" id="phone">-</span>
                 </div>
                 <div class="info-item">
-                    <span class="info-label">지출증빙</span>
-                    <span class="info-value" id="receipt">-</span>
+                    <span class="info-label">신청 강의</span>
+                    <span class="info-value" id="course">-</span>
                 </div>
             </div>
         </div>
 
-        <a href="https://open.kakao.com/o/gXXXXXXX" class="kakao-btn" target="_blank">
+        <a href="https://open.kakao.com/o/gvWu6Y1h" class="kakao-btn" target="_blank">
             <svg viewBox="0 0 24 24" fill="currentColor">
                 <path
                     d="M12 3C6.48 3 2 6.58 2 11c0 2.84 1.88 5.34 4.7 6.77-.15.54-.54 1.96-.62 2.27-.1.38.14.38.29.27.12-.08 1.87-1.24 2.63-1.75.65.1 1.32.15 2 .15 5.52 0 10-3.58 10-8s-4.48-8-10-8z" />
@@ -362,13 +358,13 @@
             const params = new URLSearchParams(window.location.search);
             const data = {};
 
-            // Tally에서 전달되는 파라미터들 - 실제 필드 ID에 맞게 수정
+            // Tally에서 전달되는 일반적인 파라미터들
+            // 실제 Tally 필드 ID에 맞게 수정 필요
             const fieldMappings = {
-                'name': ['name', 'Name', '이름'],
-                'phone': ['phone', 'Phone', '연락처', '전화번호'],
-                'email': ['email', 'Email', '이메일'],
-                'payment': ['payment', 'Payment', '결제수단'],
-                'receipt': ['receipt', 'Receipt', '지출증빙']
+                'name': ['name', 'Name', '이름', 'field_name'],
+                'email': ['email', 'Email', '이메일', 'field_email'],
+                'phone': ['phone', 'Phone', '연락처', '전화번호', 'field_phone'],
+                'course': ['course', 'Course', '강의', '신청강의', 'field_course']
             };
 
             for (const [key, aliases] of Object.entries(fieldMappings)) {
@@ -394,10 +390,9 @@
             const data = getUrlParams();
 
             if (data.name) document.getElementById('name').textContent = data.name;
-            if (data.phone) document.getElementById('phone').textContent = data.phone;
             if (data.email) document.getElementById('email').textContent = data.email;
-            if (data.payment) document.getElementById('payment').textContent = data.payment;
-            if (data.receipt) document.getElementById('receipt').textContent = data.receipt;
+            if (data.phone) document.getElementById('phone').textContent = data.phone;
+            if (data.course) document.getElementById('course').textContent = data.course;
 
             // 정보가 없는 항목은 숨기기
             const infoItems = document.querySelectorAll('.info-item');
