--- a/index.html
+++ b/index.html
@@ -301,6 +301,131 @@
                 padding: 16px;
             }
         }
+
+        /* 입금계좌 버튼 */
+        .bank-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+            color: white;
+            padding: 14px 28px;
+            border-radius: 50px;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;
+            border: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);
+            margin-bottom: 12px;
+        }
+
+        .bank-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.5);
+        }
+
+        .bank-btn svg {
+            width: 24px;
+            height: 24px;
+        }
+
+        /* 모달 오버레이 */
+        .modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(5px);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-overlay.active {
+            display: flex;
+        }
+
+        /* 모달 컨텐츠 */
+        .modal-content {
+            background: linear-gradient(145deg, #1e1e2e 0%, #2a2a3e 100%);
+            border-radius: 20px;
+            padding: 32px;
+            max-width: 400px;
+            width: 90%;
+            text-align: center;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.5);
+            animation: modalSlideIn 0.3s ease;
+        }
+
+        @keyframes modalSlideIn {
+            from {
+                opacity: 0;
+                transform: scale(0.9) translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1) translateY(0);
+            }
+        }
+
+        .modal-content h3 {
+            color: #fff;
+            font-size: 20px;
+            margin-bottom: 20px;
+        }
+
+        .bank-info {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 12px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        .bank-info-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .bank-info-item:last-child {
+            border-bottom: none;
+        }
+
+        .bank-info-label {
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 14px;
+        }
+
+        .bank-info-value {
+            color: #10b981;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .modal-close-btn {
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border: none;
+            padding: 12px 32px;
+            border-radius: 50px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .modal-close-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
     </style>
 </head>
 
@@ -349,7 +474,36 @@
             카카오톡 단톡방 참여하기
         </a>
 
+        <button class="bank-btn" onclick="openBankModal()">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z" />
+            </svg>
+            입금계좌 확인하기
+        </button>
+
         <p class="footer-text">문의사항이 있으시면 단톡방에서 질문해주세요.</p>
+    </div>
+
+    <!-- 입금계좌 모달 -->
+    <div id="bankModal" class="modal-overlay" onclick="closeBankModal(event)">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <h3>🏦 입금 계좌 정보</h3>
+            <div class="bank-info">
+                <div class="bank-info-item">
+                    <span class="bank-info-label">은행</span>
+                    <span class="bank-info-value">신한은행</span>
+                </div>
+                <div class="bank-info-item">
+                    <span class="bank-info-label">계좌번호</span>
+                    <span class="bank-info-value">110-123-456789</span>
+                </div>
+                <div class="bank-info-item">
+                    <span class="bank-info-label">예금주</span>
+                    <span class="bank-info-value">덴조이치과</span>
+                </div>
+            </div>
+            <button class="modal-close-btn" onclick="closeBankModal()">닫기</button>
+        </div>
     </div>
 
     <script>
@@ -505,6 +659,24 @@
                     Math.random() * window.innerHeight * 0.5
                 );
             }, 1500);
+        });
+
+        // 모달 열기/닫기 함수
+        function openBankModal() {
+            document.getElementById('bankModal').classList.add('active');
+        }
+
+        function closeBankModal(event) {
+            if (!event || event.target.id === 'bankModal') {
+                document.getElementById('bankModal').classList.remove('active');
+            }
+        }
+
+        // ESC 키로 모달 닫기
+        document.addEventListener('keydown', function (e) {
+            if (e.key === 'Escape') {
+                closeBankModal();
+            }
         });
     </script>
 </body>
